<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csce4623.rynolan.urush.HomeFragment"
    android:id="@+id/fragment_home">

    <TextView
        android:text="@string/home_section_upcoming_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvHomeSection"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeDescription"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/home_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvHomeDescription"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeHeader"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/home_header"
        android:id="@+id/tvHomeHeader"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:textColor="@android:color/black" />

    <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeSection"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/lvNewsFeed" />


</android.support.constraint.ConstraintLayout>
